# agentic-framework

./: .gitignore  README.md  chat-gpt-prompt.py  chatgpt-prompt.sh  concat-code-tree.sh  pyproject.toml  run-problems.sh  save-code-tree.py  tailwind.config.js
Iteration_5b/: REAME.md
Iteration_6/: README.md  agents.py  compute.py  main.py  schemas.py  supervisor.py  tool_registry.py
Iteration_7/: README.md  agent_dispatcher.py  agents.py  main.py  schemas.py  supervisor.py
docs/: README.md  authority_map.md  document_writer_contract.md  document_writer_convergence.md  intent_ui_contract.md
docs_drafts/: 00-2DO.md  CHATGPT_RESET_WRITER.md  META_AGENT_COLLABORATION.md  META_META_CHATGPT.md  RUST_CMD_CHEAT_SHEET.md  adapter.md  coding-matra.md  document-tree.md  document-writer-2.md  document-writer-emission.md  document-writer.md  document.md  document_writer_output_binding.md  domain-spec.md  gradio.md  hardening-doc-writer.md  inner-writer-task-list.md  intent-envelope.md  outer-writer.md  post-gradio.md  prompt-engineering.md  stateless-writer.md  stromme-review.md  supervisor-cleanup.md  supervisor-hardening.md  text-prompt-refiner.md  todo.md  writer-2.md  writer-codex-tasks.md  writer-spec-v2.md  writer-spec.md  writer.md
scripts/: ai_behavior_prompt.txt  chat-prompt.txt  chatgpt-prompt.sh  project-snapshot.sh
src/agentic/: agents.py  (+12 more)
tests/: test_supervisor_meta_call.py  test_supervisor_response_contract.py  test_writer_atomic_routing.py  test_writer_invariants.py  test_writer_persistence.py  test_writer_refine_semantics.py  test_writer_reject_retry.py  (+4 more)
(+329 files in other folders)
